--- a/action.yaml
+++ b/action.yaml
@@ -348,6 +348,15 @@ runs:
       name: "enclave-dump-${{ steps.kurtosis.outputs.enclave_name }}"
       path: "${{ steps.kurtosis.outputs.tempdir }}/dump"
 
+  - name: Clean all docker containers, images, and volumes
+    if: ${{ always() && inputs.clean_docker == 'true' }}
+    shell: bash
+    run: |
+      docker stop $(docker ps -a -q) || true
+      docker rm -f $(docker ps -a -q) || true
+      docker rmi -f $(docker images -q) || true
+      docker system prune -a -f || true
+
   # remove kurtosis enclave
   - name: Remove kurtosis enclave
     uses: gacts/run-and-post-run@d803f6920adc9a47eeac4cb6c93dbc2e2890c684 # v1.4.2
